Details
-
Bug
-
Status: Resolved
-
Blocker
-
Resolution: Fixed
-
None
-
None
-
ghx-label-13
Description
Hit a crash when running failure/test_failpoints.py for other purpose. Attached the resolved minidump file.
Crash reason: SIGSEGV Crash address: 0x0 Process uptime: not available Thread 296 (crashed) 0 impalad!impala::NestedLoopJoinNode::Close(impala::RuntimeState*) [nested-loop-join-node.cc : 155 + 0x2a] 1 impalad!impala::FragmentInstanceState::Close() [fragment-instance-state.cc : 421 + 0x33] 2 impalad!impala::FragmentInstanceState::Exec() [fragment-instance-state.cc : 99 + 0xf] 3 impalad!impala::QueryState::ExecFInstance(impala::FragmentInstanceState*) [query-state.cc : 653 + 0x19] 4 impalad!impala::QueryState::StartFInstances()::{lambda()#1}::operator()() const + 0x26 5 impalad!boost::detail::function::void_function_obj_invoker0<impala::QueryState::StartFInstances()::<lambda()>, void>::invoke [function_template.hpp : 153 + 0xc] 6 impalad!boost::function0<void>::operator()() const [function_template.hpp : 767 + 0x11] 7 impalad!impala::Thread::SuperviseThread(std::string const&, std::string const&, boost::function<void ()>, impala::ThreadDebugInfo const*, impala::Promise<long, (impala::PromiseMode)0>*) [thread.cc : 360 + 0xf] 8 impalad!void boost::_bi::list5<boost::_bi::value<std::string>, boost::_bi::value<std::string>, boost::_bi::value<boost::function<void ()> >, boost::_bi::value<impala::ThreadDebugInfo*>, boost::_bi::value<impala::Promise<long, (impala::PromiseMode)0>*> >::operator()<void (*)(std::string const&, std::string const&, boost::function<void ()>, impala::ThreadDebugInfo const*, impala::Promise<long, (impala::PromiseMode)0>*), boost::_bi::list0>(boost::_bi::type<void>, void (*&)(std::string const&, std::string const&, boost::function<void ()>, impala::ThreadDebugInfo const*, impala::Promise<long, (impala::PromiseMode)0>*), boost::_bi::list0&, int) [bind.hpp : 525 + 0x15] 9 impalad!boost::_bi::bind_t<void, void (*)(std::string const&, std::string const&, boost::function<void ()>, impala::ThreadDebugInfo const*, impala::Promise<long, (impala::PromiseMode)0>*), boost::_bi::list5<boost::_bi::value<std::string>, boost::_bi::value<std::string>, boost::_bi::value<boost::function<void ()> >, boost::_bi::value<impala::ThreadDebugInfo*>, boost::_bi::value<impala::Promise<long, (impala::PromiseMode)0>*> > >::operator()() [bind_template.hpp : 20 + 0x22] 10 impalad!boost::detail::thread_data<boost::_bi::bind_t<void, void (*)(std::string const&, std::string const&, boost::function<void ()>, impala::ThreadDebugInfo const*, impala::Promise<long, (impala::PromiseMode)0>*), boost::_bi::list5<boost::_bi::value<std::string>, boost::_bi::value<std::string>, boost::_bi::value<boost::function<void ()> >, boost::_bi::value<impala::ThreadDebugInfo*>, boost::_bi::value<impala::Promise<long, (impala::PromiseMode)0>*> > > >::run() [thread.hpp : 116 + 0x12] 11 impalad!thread_proxy + 0xda 12 libpthread-2.23.so + 0x76ba 13 libc-2.23.so + 0x10741d
How to reproduce
use functional;
set debug_action="2:PREPARE:FAIL|COORD_BEFORE_EXEC_RPC:JITTER@100@0.3";
select 1 from alltypestiny a join alltypestiny b on a.id != b.id;
Attachments
Attachments
Issue Links
- is broken by
-
IMPALA-4192 Pull all expressions in a fragment into QueryState
-
- Resolved
-