IMPALA-9309: fix uninitialised pointer in NestedLoopJoinNode

This was reproducible with a failpoint, but test_failpoints.py
does not run with the right set of parameters.

Testing:
Add regression test that reproduces the issue.

Change-Id: I6324d27e93b710e806d8599f775d0f7d575186cb
Reviewed-on: http://gerrit.cloudera.org:8080/15147
Reviewed-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>